# cecs

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
cmake/: cglm.cmake  detect_buildtype.cmake  sdl.cmake  version.cmake
include/: cecs.h
include/cecs/: cecs.h
include/lmda/: version.h
include/lmda/platform/: log.h
src/: CMakeLists.txt  cecs.c  main.c
src/cecs/: CMakeLists.txt
src/game/: CMakeLists.txt
src/gfx/: CMakeLists.txt
src/host/: CMakeLists.txt  log.config  main.c
src/platform/: CMakeLists.txt
src/platform/common/: log.c
